--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "got": "^11.8.2",
     "serverless-http": "^2.7.0",
     "yup": "^0.32.9"
   },
