--- a/serverless.yml
+++ b/serverless.yml
@@ -3,7 +3,7 @@ service: portfolio
 frameworkVersion: ">=2.12.0 <3.0.0"
 
 custom:
-  env: ${file(./config.${opt:stage, self:provider.stage, 'dev'}.json)}
+  env: ${file(./config.${opt:stage, self:provider.stage, 'dev'}.json)}  
 
 provider:
   name: aws
@@ -32,7 +32,10 @@ functions:
     handler: index.handler
     events:
       - http:
-          path: API/helloworld
+          path: /{proxy+}
+          method: get
+      - http:
+          path: /
           method: get
   
   getPortfolio:
